--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -181,6 +181,7 @@ footer {
   }
 
   header {
+    position: relative;
    grid-area: header;
    padding: 3rem;
    img{
@@ -190,6 +191,7 @@ footer {
      font-size: medium;
      padding-top:0.5rem;
      padding-left: 2.1rem;
+     padding-bottom: 1rem;
    }
   }
 
@@ -215,14 +217,17 @@ footer {
       font-size: xx-large;
     }
     form {
+      margin-top: 1rem;
       input {
         height: 3rem;
         width: 40ch;
+        font-size: medium;
       }
       button {
+        margin-left: 0.5rem;
         height: 3rem;
-        width:6rem;
-
+        width:8rem;
+        font-size: large;
       }
     }
   }
@@ -230,17 +235,18 @@ footer {
   footer {
    grid-area: footer;
    font-size: medium;
-   margin: 3rem;
+   margin: 3rem 3rem 0 3rem;
   
    #social {
    img {
-     padding-right: 1rem;
+     height: 2rem;
+     padding-right: 1.5rem;
      margin-bottom: 1rem;
    }
    }
 
-   #footer-info {
-     margin-bottom: 1rem;
+   #links-bottom {
+     margin-top: 2rem;
    }
    
   }
